--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:envless": "next build --experimental-build-mode compile",
     "clean": "find . -type d \\( -name node_modules -o -name dist -o -name .next \\) -not -path \"./.vercel/*\" -prune -exec rm -rf {} \\;",
     "start": "next start",
+    "start:oidc": "tsx ./e2e/vidis-mock-server.ts",
     "lint": "next lint",
     "types": "tsc",
     "test": "vitest run",
@@ -77,6 +78,7 @@
     "@types/katex": "0.16.7",
     "@types/markdown-it": "14.1.2",
     "@types/node": "20.17.12",
+    "@types/oidc-provider": "^8.8.0",
     "@types/react": "19.0.3",
     "@types/react-dom": "19.0.2",
     "@types/react-syntax-highlighter": "15.5.13",
@@ -84,6 +86,7 @@
     "drizzle-kit": "0.30.4",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
+    "oidc-provider": "^8.8.0",
     "postcss": "8.4.49",
     "prettier": "3.4.2",
     "tailwindcss": "3.4.1",
