--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -62,6 +62,7 @@ jobs:
         run: |
           pnpm build
           pnpm start &
+          pnpm start:oidc &
 
       - name: Run E2E tests
         run: pnpm e2e
