--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "db:migrate": "dotenv -e .env -- drizzle-kit migrate --config=./src/db/drizzle.config.ts",
     "db:migrate:envless": "drizzle-kit migrate --config=./src/db/drizzle.config.ts",
     "db:seed": "dotenv -e .env -- pnpm tsx src/db/seed/index.ts",
-    "db:studio": "dotenv -e .env -- drizzle-kit studio --config=src/db/drizzle.config.ts"
+    "db:studio": "dotenv -e .env -- drizzle-kit studio --config=src/db/drizzle.config.ts",
+    "e2e": "dotenv -e .env -- playwright test",
+    "e2e:headed": "dotenv -e .env -- playwright test --headed",
+    "e2e:ui": "dotenv -e .env -- playwright test --ui"
   },
   "packageManager": "pnpm@9.6.0",
   "dependencies": {
@@ -74,6 +77,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
+    "@playwright/test": "^1.50.1",
     "@types/bcrypt": "5.0.2",
     "@types/katex": "0.16.7",
     "@types/markdown-it": "14.1.2",
