--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
+    "dev:ssl": "next dev --experimental-https",
     "build": "next build",
     "build:envless": "next build --experimental-build-mode compile",
     "clean": "find . -type d \\( -name node_modules -o -name dist -o -name .next \\) -not -path \"./.vercel/*\" -prune -exec rm -rf {} \\;",
@@ -41,6 +43,7 @@
     "@sentry/nextjs": "9.0.0",
     "@t3-oss/env-nextjs": "0.10.1",
     "@tanstack/react-query": "5.66.0",
+    "@types/express": "^5.0.0",
     "@types/pg": "^8.11.11",
     "ai": "4.1.34",
     "bcrypt": "5.1.1",
@@ -90,6 +93,8 @@
     "drizzle-kit": "0.30.4",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
+    "express": "^4.21.2",
+    "jose": "^6.0.6",
     "oidc-provider": "^8.8.0",
     "postcss": "8.4.49",
     "prettier": "3.4.2",
