docs: add some e2e docs

--- a/.env.example
+++ b/.env.example
@@ -15,9 +15,10 @@ OTC_BUCKET_NAME=
 # Logging
 SENTRY_AUTH_TOKEN=
 SENTRY_ENVIRONMENT=development
+SENTRY_DSN=
 
 # Third party apis
 API_URL=http://127.0.0.1:3002
 
-# Used for encryption of sensitive secrets stores in the database
+# Used for encryption of sensitive secrets stored in the database
 ENCRYPTION_KEY=
