--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:envless": "next build --experimental-build-mode compile",
     "clean": "find . -type d \\( -name node_modules -o -name dist -o -name .next \\) -not -path \"./.vercel/*\" -prune -exec rm -rf {} \\;",
     "start": "next start",
+    "start:op:e2e": "op run --env-file=\"./.env.e2e\" -- next start",
     "start:oidc": "tsx ./e2e/vidis-mock-server.ts",
     "lint": "next lint",
     "types": "tsc",
@@ -23,10 +24,9 @@
     "db:migrate:op": "op run --env-file=\"./.env\" -- drizzle-kit migrate --config=./src/db/drizzle.config.ts",
     "db:migrate:envless": "drizzle-kit migrate --config=./src/db/drizzle.config.ts",
     "db:seed": "op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
+    "db:seed:op": "op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
     "db:studio": "dotenv -e .env -- drizzle-kit studio --config=src/db/drizzle.config.ts",
     "drizzle:up": "drizzle-kit up --config=src/db/drizzle.config.ts",
-    "build:e2e": "next build --experimental-build-mode compile",
-    "start:e2e": "dotenv -e .env.e2e -- next start",
     "e2e": "dotenv -e .env -- playwright test",
     "e2e:headed": "dotenv -e .env -- playwright test --headed",
     "e2e:ui": "dotenv -e .env -- playwright test --ui",
