--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -3,11 +3,11 @@ name: E2E Testing
 on:
   push:
     branches:
-      - main 
+      - main
   pull_request:
     types: [opened, ready_for_review, synchronize]
     branches:
-      - main 
+      - main
   workflow_dispatch:
 
 jobs:
@@ -19,9 +19,9 @@ jobs:
         ports:
           - 5432:5432
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: 74JHVrorrZ3cuuov
-          POSTGRES_DB: testdb
+          POSTGRES_USER: telli_dialog_db 
+          POSTGRES_PASSWORD: test1234 
+          POSTGRES_DB: telli_dialog_db 
         options: >-
           --health-cmd "pg_isready -U postgres"
           --health-interval 10s
@@ -32,10 +32,29 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup 1Password CLI
-        uses: 1password/load-secrets-action/configure@v2
+      - name: Load 1Password Secrets
+        uses: 1password/load-secrets-action@v1
         with:
+          export-env: true
           service-account-token: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+        env:
+          NEXTAUTH_URL: op://Telli/.env.e2e telli-chatbot/NEXTAUTH_URL
+          DATABASE_URL: op://Telli/.env.e2e telli-chatbot/DATABASE_URL
+          AUTH_SECRET: op://Telli/.env.e2e telli-chatbot/AUTH_SECRET
+          OTC_SECRET_ACCESS_KEY: op://Telli/.env.e2e telli-chatbot/OTC_SECRET_ACCESS_KEY
+          OTC_ACCESS_KEY_ID: op://Telli/.env.e2e telli-chatbot/OTC_ACCESS_KEY_ID
+          OTC_S3_HOSTNAME: op://Telli/.env.e2e telli-chatbot/OTC_S3_HOSTNAME
+          OTC_BUCKET_NAME: op://Telli/.env.e2e telli-chatbot/OTC_BUCKET_NAME
+          SENTRY_AUTH_TOKEN: op://Telli/.env.e2e telli-chatbot/SENTRY_AUTH_TOKEN
+          SENTRY_ENVIRONMENT: op://Telli/.env.e2e telli-chatbot/SENTRY_ENVIRONMENT
+          VIDIS_CLIENT_ID: op://Telli/.env.e2e telli-chatbot/VIDIS_CLIENT_ID
+          VIDIS_CLIENT_SECRET: op://Telli/.env.e2e telli-chatbot/VIDIS_CLIENT_SECRET
+          VIDIS_ISSUER_URI: op://Telli/.env.e2e telli-chatbot/VIDIS_ISSUER_URI
+          API_URL: op://Telli/.env.e2e telli-chatbot/API_URL
+          ENCRYPTION_KEY: op://Telli/.env.e2e telli-chatbot/ENCRYPTION_KEY
+          SENTRY_DSN: op://Telli/.env.e2e telli-chatbot/SENTRY_DSN
+          API_KEY: op://Telli/.env.e2e telli-chatbot/API_KEY
+          BAVARIA_API_KEY: op://Telli/.env.e2e telli-chatbot/BAVARIA_API_KEY
 
       - name: Use Node.js
         uses: actions/setup-node@v3
@@ -59,12 +78,12 @@ jobs:
           done
 
       - name: Run migrations or seed database (if applicable)
-        run: pnpm db:migrate:op && pnpm db:seed:op
+        run: pnpm db:migrate && pnpm db:seed
 
       - name: Start application
         run: |
           pnpm build:envless
-          pnpm start:op:e2e &
+          pnpm start &
           pnpm start:oidc &
 
       - name: Run E2E tests
