--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "build:envless": "next build --experimental-build-mode compile",
     "clean": "find . -type d \\( -name node_modules -o -name dist -o -name .next \\) -not -path \"./.vercel/*\" -prune -exec rm -rf {} \\;",
     "start": "next start",
-    "start:op:e2e": "op run --env-file=\"./.env.e2e\" -- next start",
     "start:oidc": "tsx ./e2e/vidis-mock-server.ts",
     "lint": "next lint",
     "types": "tsc",
@@ -20,10 +19,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "db:generate": "drizzle-kit generate --config=./src/db/drizzle.config.ts",
-    "db:migrate": "dotenv -e .env -- drizzle-kit migrate --config=./src/db/drizzle.config.ts",
+    "db:migrate": "drizzle-kit migrate --config=./src/db/drizzle.config.ts",
     "db:migrate:op": "op run --env-file=\"./.env\" -- drizzle-kit migrate --config=./src/db/drizzle.config.ts",
-    "db:migrate:envless": "drizzle-kit migrate --config=./src/db/drizzle.config.ts",
-    "db:seed": "op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
+    "db:seed": "pnpm tsx src/db/seed/index.ts",
     "db:seed:op": "op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
     "db:studio": "dotenv -e .env -- drizzle-kit studio --config=src/db/drizzle.config.ts",
     "drizzle:up": "drizzle-kit up --config=src/db/drizzle.config.ts",
