--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "e2e": "dotenv -e .env -- playwright test",
     "e2e:headed": "dotenv -e .env -- playwright test --headed",
     "e2e:ui": "dotenv -e .env -- playwright test --ui",
+    "k6:build": "node e2e/load_test/esbuild.k6.config.js",
+    "k6:run": "K6_BROWSER_HEADLESS=false pnpm k6:build && K6_BROWSER_HEADLESS=false k6 run e2e/load_test/index.js",
     "postinstall": "playwright install"
   },
   "packageManager": "pnpm@9.6.0",
@@ -56,6 +58,7 @@
     "docx": "9.1.1",
     "drizzle-orm": "0.39.3",
     "import-in-the-middle": "1.13.0",
+    "k6": "^0.0.0",
     "katex": "0.16.21",
     "markdown-it": "14.1.0",
     "nanoid": "5.0.9",
@@ -86,6 +89,7 @@
     "@eslint/eslintrc": "3.2.0",
     "@playwright/test": "^1.50.1",
     "@types/bcrypt": "5.0.2",
+    "@types/k6": "^0.57.1",
     "@types/katex": "0.16.7",
     "@types/markdown-it": "14.1.2",
     "@types/node": "20.17.12",
@@ -95,6 +99,7 @@
     "@types/react-syntax-highlighter": "15.5.13",
     "dotenv-cli": "7.4.1",
     "drizzle-kit": "0.30.4",
+    "esbuild": "^0.25.1",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
     "express": "^4.21.2",
