--- a/package.json
+++ b/package.json
@@ -29,8 +29,14 @@
     "e2e:headed": "dotenv -e .env -- playwright test --headed",
     "e2e:ui": "dotenv -e .env -- playwright test --ui",
     "k6:build": "node e2e/load_test/esbuild.k6.config.js",
-    "k6:run": "K6_BROWSER_HEADLESS=false pnpm k6:build && K6_BROWSER_HEADLESS=false k6 run e2e/load_test/index.js",
-    "postinstall": "playwright install"
+    "k6:run:ui": "K6_BROWSER_HEADLESS=false pnpm k6:build && K6_BROWSER_HEADLESS=false k6 run e2e/load_test/index.js -e K6_BROWSER_HEADLESS=false",
+    "k6:run": "pnpm k6:build && K6_BROWSER_HEADLESS=true k6 run e2e/load_test/index.js -e K6_BROWSER_HEADLESS=true",
+    "postinstall": "playwright install",
+    "start:cluster": "pm2 start e2e/load_test/ecosystem.config.js",
+    "stop:cluster": "pm2 stop all",
+    "delete:cluster": "pm2 delete all",
+    "status:cluster": "pm2 status",
+    "logs:cluster": "pm2 logs"
   },
   "packageManager": "pnpm@9.6.0",
   "dependencies": {
@@ -69,6 +75,7 @@
     "next-runtime-env": "3.2.2",
     "openai": "4.83.0",
     "pg": "8.13.1",
+    "pm2": "^6.0.5",
     "qrcode.react": "4.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
