--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "docx": "9.1.1",
     "drizzle-orm": "0.39.3",
     "import-in-the-middle": "1.13.0",
+    "ioredis": "^5.6.0",
     "k6": "^0.0.0",
     "katex": "0.16.21",
     "markdown-it": "14.1.0",
