feat: prepare load tests (#17)
* feat: prepare load tests

* feat: delete js

* feat: ignore indexjs

* feat: adjust user mappings

* feat: adjust load tests

* feat: adjust server

* feat: wip

* feat: adjust

* feat: adjust

* wip

* wip

* wip

* wip

* wip

* feat: add redis adapter

* feat: adjust tests

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean": "find . -type d \\( -name node_modules -o -name dist -o -name .next \\) -not -path \"./.vercel/*\" -prune -exec rm -rf {} \\;",
     "start": "next start",
     "start:oidc": "tsx ./e2e/vidis-mock-server.ts",
+    "build:oidc": "node e2e/load_test/esbuild.oidc.config.js",
     "lint": "next lint",
     "types": "tsc",
     "test": "vitest run",
@@ -29,8 +30,14 @@
     "e2e:headed": "dotenv -e .env -- playwright test --headed",
     "e2e:ui": "dotenv -e .env -- playwright test --ui",
     "k6:build": "node e2e/load_test/esbuild.k6.config.js",
-    "k6:run": "K6_BROWSER_HEADLESS=false pnpm k6:build && K6_BROWSER_HEADLESS=false k6 run e2e/load_test/index.js",
-    "postinstall": "playwright install"
+    "k6:run:ui": "K6_BROWSER_HEADLESS=false pnpm k6:build && K6_BROWSER_HEADLESS=false k6 run e2e/load_test/index.js -e K6_BROWSER_HEADLESS=false",
+    "k6:run": "pnpm k6:build && K6_BROWSER_HEADLESS=true k6 run e2e/load_test/index.js -e K6_BROWSER_HEADLESS=true",
+    "postinstall": "playwright install",
+    "start:cluster": "pm2 start e2e/load_test/ecosystem.config.js",
+    "stop:cluster": "pm2 stop all",
+    "delete:cluster": "pm2 delete all",
+    "status:cluster": "pm2 status",
+    "logs:cluster": "pm2 logs"
   },
   "packageManager": "pnpm@9.6.0",
   "dependencies": {
@@ -58,6 +65,7 @@
     "docx": "9.1.1",
     "drizzle-orm": "0.39.3",
     "import-in-the-middle": "1.13.0",
+    "ioredis": "^5.6.0",
     "k6": "^0.0.0",
     "katex": "0.16.21",
     "markdown-it": "14.1.0",
@@ -69,6 +77,7 @@
     "next-runtime-env": "3.2.2",
     "openai": "4.83.0",
     "pg": "8.13.1",
+    "pm2": "^6.0.5",
     "qrcode.react": "4.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
