--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "pg": "8.13.1",
     "pm2": "^6.0.5",
     "qrcode.react": "4.2.0",
+    "rabbitmq-client": "5.0.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.54.2",
