--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "db:generate": "drizzle-kit generate --config=./src/db/drizzle.config.ts",
     "db:migrate": "drizzle-kit migrate --config=./src/db/drizzle.config.ts",
     "db:migrate:op": "op run --env-file=\"./.env\" -- drizzle-kit migrate --config=./src/db/drizzle.config.ts",
-    "db:seed": "dotenv -e .env.staging -- pnpm tsx src/db/seed/index.ts",
+    "db:seed": "tsx src/db/seed/index.ts",
     "db:seed:op": "op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
     "db:studio": "dotenv -e .env -- drizzle-kit studio --config=src/db/drizzle.config.ts",
     "drizzle:up": "drizzle-kit up --config=src/db/drizzle.config.ts",
@@ -79,6 +79,7 @@
     "pg": "8.13.1",
     "pm2": "6.0.5",
     "qrcode.react": "4.2.0",
+    "rabbitmq-client": "5.0.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.54.2",
