--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
-NEXTAUTH_URL="op://Telli/.env.local telli-chatbot/NEXTAUTH_URL"
-DATABASE_URL="op://Telli/.env.local telli-chatbot/DATABASE_URL"
-AUTH_SECRET="op://Telli/.env.local telli-chatbot/AUTH_SECRET"
-OTC_SECRET_ACCESS_KEY="op://Telli/.env.local telli-chatbot/OTC_SECRET_ACCESS_KEY"
-OTC_ACCESS_KEY_ID="op://Telli/.env.local telli-chatbot/OTC_ACCESS_KEY_ID"
-OTC_S3_HOSTNAME="op://Telli/.env.local telli-chatbot/OTC_S3_HOSTNAME"
-OTC_BUCKET_NAME="op://Telli/.env.local telli-chatbot/OTC_BUCKET_NAME"
-# SENTRY_AUTH_TOKEN="op://Telli/.env.local telli-chatbot/SENTRY_AUTH_TOKEN"
-SENTRY_ENVIRONMENT="op://Telli/.env.local telli-chatbot/SENTRY_ENVIRONMENT"
-VIDIS_CLIENT_ID="op://Telli/.env.local telli-chatbot/VIDIS_CLIENT_ID"
-VIDIS_CLIENT_SECRET="op://Telli/.env.local telli-chatbot/VIDIS_CLIENT_SECRET"
-VIDIS_ISSUER_URI="op://Telli/.env.local telli-chatbot/VIDIS_ISSUER_URI"
-API_URL="op://Telli/.env.local telli-chatbot/API_URL"
-ENCRYPTION_KEY="op://Telli/.env.local telli-chatbot/ENCRYPTION_KEY"
-SENTRY_DSN="op://Telli/.env.local telli-chatbot/SENTRY_DSN"
-API_KEY="op://Telli/.env.local telli-chatbot/API_KEY"
-RABBITMQ_URI="op://Telli/.env.local telli-chatbot/RABBITMQ_URI"
-BAVARIA_API_KEY="op://Telli/.env.e2e telli-chatbot/BAVARIA_API_KEY"
+NEXTAUTH_URL="op://Telli/.env.$ENVIRONMENT chatbot/NEXTAUTH_URL"
+DATABASE_URL="op://Telli/.env.$ENVIRONMENT chatbot/DATABASE_URL"
+AUTH_SECRET="op://Telli/.env.$ENVIRONMENT chatbot/AUTH_SECRET"
+OTC_SECRET_ACCESS_KEY="op://Telli/.env.$ENVIRONMENT chatbot/OTC_SECRET_ACCESS_KEY"
+OTC_ACCESS_KEY_ID="op://Telli/.env.$ENVIRONMENT chatbot/OTC_ACCESS_KEY_ID"
+OTC_S3_HOSTNAME="op://Telli/.env.$ENVIRONMENT chatbot/OTC_S3_HOSTNAME"
+OTC_BUCKET_NAME="op://Telli/.env.$ENVIRONMENT chatbot/OTC_BUCKET_NAME"
+# SENTRY_AUTH_TOKEN="op://Telli/.env.$ENVIRONMENT chatbot/SENTRY_AUTH_TOKEN"
+SENTRY_ENVIRONMENT="op://Telli/.env.$ENVIRONMENT chatbot/SENTRY_ENVIRONMENT"
+VIDIS_CLIENT_ID="op://Telli/.env.$ENVIRONMENT chatbot/VIDIS_CLIENT_ID"
+VIDIS_CLIENT_SECRET="op://Telli/.env.$ENVIRONMENT chatbot/VIDIS_CLIENT_SECRET"
+VIDIS_ISSUER_URI="op://Telli/.env.$ENVIRONMENT chatbot/VIDIS_ISSUER_URI"
+API_URL="op://Telli/.env.$ENVIRONMENT chatbot/API_URL"
+ENCRYPTION_KEY="op://Telli/.env.$ENVIRONMENT chatbot/ENCRYPTION_KEY"
+SENTRY_DSN="op://Telli/.env.$ENVIRONMENT chatbot/SENTRY_DSN"
+API_KEY="op://Telli/.env.$ENVIRONMENT chatbot/API_KEY"
+RABBITMQ_URI="op://Telli/.env.$ENVIRONMENT chatbot/RABBITMQ_URI"
+BAVARIA_API_KEY="op://Telli/.env.$ENVIRONMENT chatbot/BAVARIA_API_KEY"
