--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev:op": "op run --env-file=\"./.env\" -- next dev --turbo",
-    "dev:turbo": "next dev --turbo",
+    "op": "op run --env-file=\"./.env\" --no-masking",
+    "dev": "ENVIRONMENT=development pnpm op -- next dev --turbo",
+    "dev:e2e": "ENVIRONMENT=e2e pnpm op -- next dev --turbo",
     "dev:ssl": "next dev --experimental-https",
     "build": "next build",
     "build:envless": "next build --experimental-build-mode compile",
@@ -28,7 +28,7 @@
     "drizzle:up": "drizzle-kit up --config=src/db/drizzle.config.ts",
     "e2e": "dotenv -e .env -- playwright test",
     "e2e:headed": "dotenv -e .env -- playwright test --headed",
-    "e2e:ui": "dotenv -e .env -- playwright test --ui",
+    "e2e:ui": "ENVIRONMENT=e2e pnpm op -- playwright test --ui",
     "k6:build": "node e2e/load_test/esbuild.k6.config.js",
     "k6:run:ui": "K6_BROWSER_HEADLESS=false pnpm k6:build && K6_BROWSER_HEADLESS=false k6 run e2e/load_test/index.js -e K6_BROWSER_HEADLESS=false",
     "k6:run": "pnpm k6:build && K6_BROWSER_HEADLESS=true K6_BROWSER_ARGS='no-sandbox' k6 run e2e/load_test/index.js -e K6_BROWSER_HEADLESS=true -e K6_BROWSER_ARGS='no-sandbox'",
