--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -38,24 +38,24 @@ jobs:
           export-env: true
         env:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-          NEXTAUTH_URL: op://Telli/.env.e2e telli-chatbot/NEXTAUTH_URL
-          DATABASE_URL: op://Telli/.env.e2e telli-chatbot/DATABASE_URL
-          AUTH_SECRET: op://Telli/.env.e2e telli-chatbot/AUTH_SECRET
-          OTC_SECRET_ACCESS_KEY: op://Telli/.env.e2e telli-chatbot/OTC_SECRET_ACCESS_KEY
-          OTC_ACCESS_KEY_ID: op://Telli/.env.e2e telli-chatbot/OTC_ACCESS_KEY_ID
-          OTC_S3_HOSTNAME: op://Telli/.env.e2e telli-chatbot/OTC_S3_HOSTNAME
-          OTC_BUCKET_NAME: op://Telli/.env.e2e telli-chatbot/OTC_BUCKET_NAME
-          # SENTRY_AUTH_TOKEN: op://Telli/.env.e2e telli-chatbot/SENTRY_AUTH_TOKEN
-          SENTRY_ENVIRONMENT: op://Telli/.env.e2e telli-chatbot/SENTRY_ENVIRONMENT
-          VIDIS_CLIENT_ID: op://Telli/.env.e2e telli-chatbot/VIDIS_CLIENT_ID
-          VIDIS_CLIENT_SECRET: op://Telli/.env.e2e telli-chatbot/VIDIS_CLIENT_SECRET
-          VIDIS_ISSUER_URI: op://Telli/.env.e2e telli-chatbot/VIDIS_ISSUER_URI
-          API_URL: op://Telli/.env.e2e telli-chatbot/API_URL
-          ENCRYPTION_KEY: op://Telli/.env.e2e telli-chatbot/ENCRYPTION_KEY
-          SENTRY_DSN: op://Telli/.env.e2e telli-chatbot/SENTRY_DSN
-          API_KEY: op://Telli/.env.e2e telli-chatbot/API_KEY
-          BAVARIA_API_KEY: op://Telli/.env.e2e telli-chatbot/BAVARIA_API_KEY
-          RABBITMQ_URI: op://Telli/.env.e2e telli-chatbot/RABBITMQ_URI
+          NEXTAUTH_URL: op://Telli/.env.e2e chatbot/NEXTAUTH_URL
+          DATABASE_URL: op://Telli/.env.e2e chatbot/DATABASE_URL
+          AUTH_SECRET: op://Telli/.env.e2e chatbot/AUTH_SECRET
+          OTC_SECRET_ACCESS_KEY: op://Telli/.env.e2e chatbot/OTC_SECRET_ACCESS_KEY
+          OTC_ACCESS_KEY_ID: op://Telli/.env.e2e chatbot/OTC_ACCESS_KEY_ID
+          OTC_S3_HOSTNAME: op://Telli/.env.e2e chatbot/OTC_S3_HOSTNAME
+          OTC_BUCKET_NAME: op://Telli/.env.e2e chatbot/OTC_BUCKET_NAME
+          # SENTRY_AUTH_TOKEN: op://Telli/.env.e2e chatbot/SENTRY_AUTH_TOKEN
+          SENTRY_ENVIRONMENT: op://Telli/.env.e2e chatbot/SENTRY_ENVIRONMENT
+          VIDIS_CLIENT_ID: op://Telli/.env.e2e chatbot/VIDIS_CLIENT_ID
+          VIDIS_CLIENT_SECRET: op://Telli/.env.e2e chatbot/VIDIS_CLIENT_SECRET
+          VIDIS_ISSUER_URI: op://Telli/.env.e2e chatbot/VIDIS_ISSUER_URI
+          API_URL: op://Telli/.env.e2e chatbot/API_URL
+          ENCRYPTION_KEY: op://Telli/.env.e2e chatbot/ENCRYPTION_KEY
+          SENTRY_DSN: op://Telli/.env.e2e chatbot/SENTRY_DSN
+          API_KEY: op://Telli/.env.e2e chatbot/API_KEY
+          BAVARIA_API_KEY: op://Telli/.env.e2e chatbot/BAVARIA_API_KEY
+          RABBITMQ_URI: op://Telli/.env.e2e chatbot/RABBITMQ_URI
 
       - name: Use Node.js
         uses: actions/setup-node@v3
