--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "next-intl": "3.26.3",
     "next-runtime-env": "3.2.2",
     "openai": "4.83.0",
+    "pdf2json": "3.1.5",
+    "pdfreader": "3.0.7",
     "pg": "8.13.1",
     "pm2": "6.0.5",
     "qrcode.react": "4.2.0",
