--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "ioredis": "5.6.0",
     "k6": "0.0.0",
     "katex": "0.16.21",
+    "mammoth": "1.9.0",
     "markdown-it": "14.1.0",
     "nanoid": "5.0.9",
     "next": "15.2.3",
@@ -77,7 +78,6 @@
     "next-intl": "3.26.3",
     "next-runtime-env": "3.2.2",
     "openai": "4.83.0",
-    "pdf2json": "3.1.5",
     "pdfreader": "3.0.7",
     "pg": "8.13.1",
     "pm2": "6.0.5",
