--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@radix-ui/react-dropdown-menu": "2.1.6",
     "@radix-ui/react-select": "2.1.6",
     "@radix-ui/react-toast": "1.2.6",
+    "@radix-ui/react-tooltip": "1.1.8",
     "@sentry/nextjs": "9.0.0",
     "@t3-oss/env-nextjs": "0.10.1",
     "@tanstack/react-query": "5.66.0",
@@ -99,7 +100,7 @@
     "tailwind-merge": "3.0.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
-    "tsx": "4.7.2",
+    "tsx": "4.19.4",
     "zod": "3.22.4"
   },
   "devDependencies": {
