fix: delete created files from otc bucket

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:envless": "next build --experimental-build-mode compile",
     "clean": "find . -type d \\( -name node_modules -o -name dist -o -name .next \\) -not -path \"./.vercel/*\" -prune -exec rm -rf {} \\;",
     "start": "next start",
+    "start:op": "op run --env-file=\"./.env\" -- next start",
     "start:oidc": "tsx ./e2e/vidis-mock-server.ts",
     "build:oidc": "node e2e/load_test/esbuild.oidc.config.js",
     "lint": "next lint",
@@ -63,6 +64,7 @@
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
     "docx": "9.1.1",
+    "dotenv": "16.4.5",
     "dotenv-cli": "7.4.1",
     "drizzle-orm": "0.39.3",
     "drizzle-kit": "0.30.4",
