revert: dotenv dependency to use ENVIRONMENT variable

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "db:seed:op": "op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
     "db:studio": "dotenv -e .env -- drizzle-kit studio --config=src/db/drizzle.config.ts",
     "drizzle:up": "drizzle-kit up --config=src/db/drizzle.config.ts",
-    "e2e": "dotenv -e .env -- playwright test",
-    "e2e:headed": "dotenv -e .env -- playwright test --headed",
+    "e2e": "ENVIRONMENT=e2e pnpm op -- playwright test",
+    "e2e:headed": "ENVIRONMENT=e2e pnpm op -- playwright test --headed",
     "e2e:ui": "ENVIRONMENT=e2e pnpm op -- playwright test --ui",
     "k6:build": "node e2e/load_test/esbuild.k6.config.js",
     "k6:run:ui": "K6_BROWSER_HEADLESS=false pnpm k6:build && K6_BROWSER_HEADLESS=false k6 run e2e/load_test/index.js -e K6_BROWSER_HEADLESS=false",
@@ -64,7 +64,6 @@
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
     "docx": "9.1.1",
-    "dotenv": "16.4.5",
     "dotenv-cli": "7.4.1",
     "drizzle-orm": "0.39.3",
     "drizzle-kit": "0.30.4",
