revert: e2e env handling

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "db:seed:op": "op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
     "db:studio": "dotenv -e .env -- drizzle-kit studio --config=src/db/drizzle.config.ts",
     "drizzle:up": "drizzle-kit up --config=src/db/drizzle.config.ts",
-    "e2e": "ENVIRONMENT=e2e pnpm op -- playwright test",
+    "e2e": "dotenv -e .env -- playwright test",
+    "e2e:op": "ENVIRONMENT=e2e pnpm op -- playwright test",
     "e2e:headed": "ENVIRONMENT=e2e pnpm op -- playwright test --headed",
     "e2e:ui": "ENVIRONMENT=e2e pnpm op -- playwright test --ui",
     "k6:build": "node e2e/load_test/esbuild.k6.config.js",
