chore: migrate to new otc buckets (#57)
* add: hostnames for staging and prod

* remove: old hostname

* fix: delete created files from otc bucket

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:envless": "next build --experimental-build-mode compile",
     "clean": "find . -type d \\( -name node_modules -o -name dist -o -name .next \\) -not -path \"./.vercel/*\" -prune -exec rm -rf {} \\;",
     "start": "next start",
+    "start:op": "op run --env-file=\"./.env\" -- next start",
     "start:oidc": "tsx ./e2e/vidis-mock-server.ts",
     "build:oidc": "node e2e/load_test/esbuild.oidc.config.js",
     "lint": "next lint",
@@ -27,7 +28,8 @@
     "db:studio": "dotenv -e .env -- drizzle-kit studio --config=src/db/drizzle.config.ts",
     "drizzle:up": "drizzle-kit up --config=src/db/drizzle.config.ts",
     "e2e": "dotenv -e .env -- playwright test",
-    "e2e:headed": "dotenv -e .env -- playwright test --headed",
+    "e2e:op": "ENVIRONMENT=e2e pnpm op -- playwright test",
+    "e2e:headed": "ENVIRONMENT=e2e pnpm op -- playwright test --headed",
     "e2e:ui": "ENVIRONMENT=e2e pnpm op -- playwright test --ui",
     "k6:build": "node e2e/load_test/esbuild.k6.config.js",
     "k6:run:ui": "K6_BROWSER_HEADLESS=false pnpm k6:build && K6_BROWSER_HEADLESS=false k6 run e2e/load_test/index.js -e K6_BROWSER_HEADLESS=false",
