add region to secrets

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ OTC_SECRET_ACCESS_KEY="op://telli Engineering/.env.$ENVIRONMENT chatbot/OTC_SECR
 OTC_ACCESS_KEY_ID="op://telli Engineering/.env.$ENVIRONMENT chatbot/OTC_ACCESS_KEY_ID"
 OTC_S3_HOSTNAME="op://telli Engineering/.env.$ENVIRONMENT chatbot/OTC_S3_HOSTNAME"
 OTC_BUCKET_NAME="op://telli Engineering/.env.$ENVIRONMENT chatbot/OTC_BUCKET_NAME"
+OTC_REGION = "op://telli Engineering/.env.$ENVIRONMENT chatbot/OTC_REGION"
 # SENTRY_AUTH_TOKEN="op://telli Engineering/.env.$ENVIRONMENT chatbot/SENTRY_AUTH_TOKEN"
 SENTRY_ENVIRONMENT="op://telli Engineering/.env.$ENVIRONMENT chatbot/SENTRY_ENVIRONMENT"
 VIDIS_CLIENT_ID="op://telli Engineering/.env.$ENVIRONMENT chatbot/VIDIS_CLIENT_ID"
