--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@aws-sdk/s3-request-presigner": "3.744.0",
     "@deutschlandgpt/core": "0.1.5",
     "@hookform/resolvers": "3.10.0",
+    "@mozilla/readability": "0.6.0",
     "@opentelemetry/instrumentation-pg": "0.51.0",
     "@radix-ui/react-alert-dialog": "1.1.6",
     "@radix-ui/react-checkbox": "1.1.4",
@@ -71,6 +72,7 @@
     "drizzle-kit": "0.30.4",
     "import-in-the-middle": "1.13.0",
     "ioredis": "5.6.0",
+    "jsdom": "24.1.0",
     "k6": "0.0.0",
     "katex": "0.16.21",
     "mammoth": "1.9.0",
@@ -112,6 +114,7 @@
     "@types/k6": "0.57.1",
     "@types/katex": "0.16.7",
     "@types/markdown-it": "14.1.2",
+    "@types/jsdom": "21.1.7",
     "@types/node": "20.17.12",
     "@types/oidc-provider": "8.8.0",
     "@types/react": "19.0.3",
