--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "@aws-sdk/s3-request-presigner": "3.744.0",
     "@deutschlandgpt/core": "0.1.5",
     "@hookform/resolvers": "3.10.0",
+    "@mozilla/readability": "0.6.0",
     "@opentelemetry/instrumentation-pg": "0.51.0",
     "@radix-ui/react-alert-dialog": "1.1.6",
     "@radix-ui/react-checkbox": "1.1.4",
     "@radix-ui/react-dropdown-menu": "2.1.6",
     "@radix-ui/react-select": "2.1.6",
     "@radix-ui/react-toast": "1.2.6",
+    "@radix-ui/react-tooltip": "1.1.8",
     "@sentry/nextjs": "9.0.0",
     "@t3-oss/env-nextjs": "0.10.1",
     "@tanstack/react-query": "5.66.0",
@@ -70,6 +72,7 @@
     "drizzle-kit": "0.30.4",
     "import-in-the-middle": "1.13.0",
     "ioredis": "5.6.0",
+    "jsdom": "24.1.0",
     "k6": "0.0.0",
     "katex": "0.16.21",
     "mammoth": "1.9.0",
@@ -101,7 +104,7 @@
     "tailwind-merge": "3.0.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
-    "tsx": "4.7.2",
+    "tsx": "4.19.4",
     "zod": "3.22.4"
   },
   "devDependencies": {
@@ -111,6 +114,7 @@
     "@types/k6": "0.57.1",
     "@types/katex": "0.16.7",
     "@types/markdown-it": "14.1.2",
+    "@types/jsdom": "21.1.7",
     "@types/node": "20.17.12",
     "@types/oidc-provider": "8.8.0",
     "@types/react": "19.0.3",
