--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "ioredis": "5.6.0",
     "jsdom": "24.1.0",
     "k6": "0.0.0",
+    "he": "1.2.0",
     "katex": "0.16.21",
     "mammoth": "1.9.0",
     "markdown-it": "14.1.0",
@@ -115,6 +116,7 @@
     "@types/katex": "0.16.7",
     "@types/markdown-it": "14.1.2",
     "@types/jsdom": "21.1.7",
+    "@types/he": "1.2.0",
     "@types/node": "20.17.12",
     "@types/oidc-provider": "8.8.0",
     "@types/react": "19.0.3",
