feat: update environment configuration and enhance floating text component
- Added SENTRY_DSN to the environment configuration for improved error tracking.
- Introduced a new script command `otc:dump` for dumping OTC data.
- Updated German translation for "excersise-title" to "Dein Arbeitsauftrag".
- Adjusted dimensions and styling of the FloatingText component for better responsiveness and user experience.
- Refactored Chevron icons for improved visual consistency.

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ OTC_S3_HOSTNAME="op://telli Engineering/.env.$ENVIRONMENT chatbot/OTC_S3_HOSTNAM
 OTC_BUCKET_NAME="op://telli Engineering/.env.$ENVIRONMENT chatbot/OTC_BUCKET_NAME"
 # SENTRY_AUTH_TOKEN="op://telli Engineering/.env.$ENVIRONMENT chatbot/SENTRY_AUTH_TOKEN"
 SENTRY_ENVIRONMENT="op://telli Engineering/.env.$ENVIRONMENT chatbot/SENTRY_ENVIRONMENT"
+SENTRY_DSN="op://telli Engineering/.env.$ENVIRONMENT chatbot/SENTRY_DSN"
 VIDIS_CLIENT_ID="op://telli Engineering/.env.$ENVIRONMENT chatbot/VIDIS_CLIENT_ID"
 VIDIS_CLIENT_SECRET="op://telli Engineering/.env.$ENVIRONMENT chatbot/VIDIS_CLIENT_SECRET"
 VIDIS_ISSUER_URI="op://telli Engineering/.env.$ENVIRONMENT chatbot/VIDIS_ISSUER_URI"
