--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: pgvector/postgres:pg16
+        image: pgvector/pgvector:pg16
         ports:
           - 5432:5432
         env:
