--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "tailwind-merge": "3.0.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
+    "unpdf": "1.0.5",
     "tsx": "4.19.4",
     "zod": "3.22.4"
   },
