--- a/package.json
+++ b/package.json
@@ -87,7 +87,6 @@
     "next-intl": "3.26.3",
     "next-runtime-env": "3.2.2",
     "openai": "4.83.0",
-    "pdfreader": "3.0.7",
     "pg": "8.13.1",
     "pm2": "6.0.5",
     "postcss": "8.4.49",
@@ -108,6 +107,7 @@
     "tailwind-merge": "3.0.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
+    "unpdf": "1.0.5",
     "tsx": "4.19.4",
     "zod": "3.22.4"
   },
