--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "jsdom": "24.1.0",
     "k6": "0.0.0",
     "katex": "0.16.21",
-    "mammoth": "1.9.0",
     "markdown-it": "14.1.0",
     "nanoid": "5.0.9",
     "next": "15.2.3",
@@ -86,6 +85,7 @@
     "next-axiom": "1.9.1",
     "next-intl": "3.26.3",
     "next-runtime-env": "3.2.2",
+    "officeparser": "5.1.1",
     "openai": "4.83.0",
     "pg": "8.13.1",
     "pm2": "6.0.5",
@@ -107,8 +107,8 @@
     "tailwind-merge": "3.0.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
-    "unpdf": "1.0.5",
     "tsx": "4.19.4",
+    "unpdf": "1.0.5",
     "zod": "3.22.4"
   },
   "devDependencies": {
