--- a/.env
+++ b/.env
@@ -11,9 +11,12 @@ SENTRY_DSN="op://telli Engineering/.env.$ENVIRONMENT chatbot/SENTRY_DSN"
 VIDIS_CLIENT_ID="op://telli Engineering/.env.$ENVIRONMENT chatbot/VIDIS_CLIENT_ID"
 VIDIS_CLIENT_SECRET="op://telli Engineering/.env.$ENVIRONMENT chatbot/VIDIS_CLIENT_SECRET"
 VIDIS_ISSUER_URI="op://telli Engineering/.env.$ENVIRONMENT chatbot/VIDIS_ISSUER_URI"
-API_URL="op://telli Engineering/.env.$ENVIRONMENT chatbot/API_URL"
+
+# API_URL="op://telli Engineering/.env.$ENVIRONMENT chatbot/API_URL"
+API_URL=http://localhost:3002
 ENCRYPTION_KEY="op://telli Engineering/.env.$ENVIRONMENT chatbot/ENCRYPTION_KEY"
 SENTRY_DSN="op://telli Engineering/.env.$ENVIRONMENT chatbot/SENTRY_DSN"
-API_KEY="op://telli Engineering/.env.$ENVIRONMENT chatbot/API_KEY"
+# API_KEY="op://telli Engineering/.env.$ENVIRONMENT chatbot/API_KEY"
+API_KEY=5m5k9vuoHsA0ePWlPJXBghBI8piVJN5I3CnmIG02wSc=
 RABBITMQ_URI="op://telli Engineering/.env.$ENVIRONMENT chatbot/RABBITMQ_URI"
 BAVARIA_API_KEY="op://telli Engineering/.env.$ENVIRONMENT chatbot/BAVARIA_API_KEY"
