--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "remark-math": "6.0.0",
     "require-in-the-middle": "7.5.1",
     "sentence-splitter": "^5.0.0",
+    "sharp": "0.33.3",
     "tailwind-merge": "3.0.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
