--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "op": "op run --env-file=\"./.env\" --no-masking",
     "op:signin": "eval $(op signin)",
     "dev": "ENVIRONMENT=development pnpm op -- next dev --turbo",
+    "dev:local": "dotenvx run -f .env.local -- next dev --turbo",
     "dev:e2e": "ENVIRONMENT=e2e pnpm op -- next dev --turbo",
     "dev:ssl": "next dev --experimental-https",
     "build": "next build",
@@ -31,6 +32,7 @@
     "otc:dump": "dotenv -e .env -- pnpm tsx src/scripts/mirgrate_otc/index.ts",
     "drizzle:up": "drizzle-kit up --config=src/db/drizzle.config.ts",
     "e2e": "dotenv -e .env -- playwright test",
+    "e2e:api": "dotenvx run -f .env.local -- playwright test tests/api/",
     "e2e:op": "ENVIRONMENT=e2e pnpm op -- playwright test",
     "e2e:headed": "ENVIRONMENT=e2e pnpm op -- playwright test --headed",
     "e2e:ui": "ENVIRONMENT=e2e pnpm op -- playwright test --ui",
@@ -51,6 +53,7 @@
     "@aws-sdk/client-s3": "3.744.0",
     "@aws-sdk/s3-request-presigner": "3.744.0",
     "@deutschlandgpt/core": "0.1.5",
+    "@dotenvx/dotenvx": "^1.44.1",
     "@hookform/resolvers": "3.10.0",
     "@mozilla/readability": "0.6.0",
     "@opentelemetry/instrumentation-pg": "0.51.0",
@@ -108,8 +111,8 @@
     "tailwind-merge": "3.0.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
-    "unpdf": "1.0.5",
     "tsx": "4.19.4",
+    "unpdf": "1.0.5",
     "zod": "3.22.4"
   },
   "devDependencies": {
