--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "rvest.vs-code-prettier-eslint",
     "bradlc.vscode-tailwindcss",
     "vitest.explorer",
-    "ms-azuretools.vscode-docker"
+    "ms-azuretools.vscode-docker",
+    "ms-playwright.playwright"
   ]
 }
