--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "db:migrate": "drizzle-kit migrate --config=./src/db/drizzle.config.ts",
     "db:migrate:op": "ENVIRONMENT=development op run --env-file=\"./.env\" -- drizzle-kit migrate --config=./src/db/drizzle.config.ts",
     "db:seed": "tsx src/db/seed/index.ts",
-    "db:seed:op": "op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
+    "db:seed:op": "ENVIRONMENT=development op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
     "db:studio": "dotenv -e .env -- drizzle-kit studio --config=src/db/drizzle.config.ts",
     "otc:dump": "dotenv -e .env -- pnpm tsx src/scripts/mirgrate_otc/index.ts",
     "drizzle:up": "drizzle-kit up --config=src/db/drizzle.config.ts",
