--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "dotenv-cli": "7.4.1",
     "drizzle-kit": "0.31.1",
     "drizzle-orm": "0.39.3",
+    "drizzle-zod": "0.7.1",
     "he": "1.2.0",
     "import-in-the-middle": "1.13.0",
     "ioredis": "5.6.0",
