TD-305 fix wrong duration and  telli point percentage

--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "format:check": "prettier --check .",
     "db:generate": "drizzle-kit generate --config=./src/db/drizzle.config.ts",
     "db:migrate": "drizzle-kit migrate --config=./src/db/drizzle.config.ts",
+    "db:migrate:local": "dotenvx run -f .env.local -- drizzle-kit migrate --config=./src/db/drizzle.config.ts",
     "db:migrate:op": "ENVIRONMENT=development op run --env-file=\"./.env\" -- drizzle-kit migrate --config=./src/db/drizzle.config.ts",
     "db:seed": "tsx src/db/seed/index.ts",
     "db:seed:op": "ENVIRONMENT=development op run --env-file=\"./.env\" -- pnpm tsx src/db/seed/index.ts",
+    "db:seed:local": "ENVIRONMENT=development dotenvx run -f .env.local -- pnpm tsx src/db/seed/index.ts",
     "db:studio": "dotenv -e .env -- drizzle-kit studio --config=src/db/drizzle.config.ts",
     "otc:dump": "dotenv -e .env -- pnpm tsx src/scripts/mirgrate_otc/index.ts",
     "drizzle:up": "drizzle-kit up --config=src/db/drizzle.config.ts",
