--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "dev": "ENVIRONMENT=development pnpm op -- next dev --turbo",
     "dev:local": "dotenvx run -f .env.local -- next dev --turbo",
     "dev:e2e": "ENVIRONMENT=e2e pnpm op -- next dev --turbo",
-    "dev:ssl": "next dev --experimental-https",
     "build": "next build",
     "build:envless": "next build --experimental-build-mode compile",
     "clean": "find . -type d \\( -name node_modules -o -name dist -o -name .next \\) -not -path \"./.vercel/*\" -prune -exec rm -rf {} \\;",
     "start": "next start",
-    "start:op": "op run --env-file=\"./.env\" -- next start",
     "start:e2e": "ENVIRONMENT=e2e pnpm op -- next start",
     "start:oidc": "tsx ./e2e/vidis-mock-server.ts",
     "build:oidc": "node e2e/load_test/esbuild.oidc.config.js",
@@ -53,7 +51,7 @@
     "@aws-sdk/client-s3": "3.744.0",
     "@aws-sdk/s3-request-presigner": "3.744.0",
     "@deutschlandgpt/core": "0.1.5",
-    "@dotenvx/dotenvx": "^1.44.1",
+    "@dotenvx/dotenvx": "1.44.1",
     "@hookform/resolvers": "3.10.0",
     "@mozilla/readability": "0.6.0",
     "@opentelemetry/instrumentation-pg": "0.51.0",
@@ -63,7 +61,7 @@
     "@radix-ui/react-select": "2.1.6",
     "@radix-ui/react-toast": "1.2.6",
     "@radix-ui/react-tooltip": "1.1.8",
-    "@sentry/nextjs": "9.0.0",
+    "@sentry/nextjs": "9.32.0",
     "@t3-oss/env-nextjs": "0.10.1",
     "@tanstack/react-query": "5.66.0",
     "@types/express": "5.0.0",
@@ -86,11 +84,11 @@
     "mammoth": "1.9.0",
     "markdown-it": "14.1.0",
     "nanoid": "3.3.8",
-    "next": "15.2.3",
+    "next": "15.3.4",
     "next-auth": "5.0.0-beta.25",
     "next-axiom": "1.9.1",
     "next-intl": "3.26.3",
-    "next-runtime-env": "3.2.2",
+    "next-runtime-env": "3.3.0",
     "openai": "4.83.0",
     "pg": "8.13.1",
     "pm2": "6.0.5",
@@ -115,7 +113,7 @@
     "tailwindcss-animate": "1.0.7",
     "tsx": "4.19.4",
     "unpdf": "1.0.5",
-    "zod": "3.22.4"
+    "zod": "3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
