--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -120,6 +120,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
     "@playwright/test": "1.50.1",
+    "@telli/typescript-config": "workspace:*",
     "@types/bcrypt": "5.0.2",
     "@types/he": "1.2.0",
     "@types/jsdom": "21.1.7",
