--- a/apps/dialog/Dockerfile
+++ b/apps/dialog/Dockerfile
@@ -1,3 +1,5 @@
+# This Dockerfile uses a multi-stage build to create a minimal production image.
+# https://docs.docker.com/build/building/multi-stage/
 
 # Alpine image
 FROM node:22-alpine AS alpine
@@ -11,16 +13,13 @@ RUN pnpm config set store-dir ~/.pnpm-store
 
 # Prune projects
 FROM base AS pruner
-ARG PROJECT
-
 WORKDIR /app
+
 COPY . .
-RUN turbo prune --scope=${PROJECT} --docker
+RUN turbo prune --scope=telli-dialog --docker
 
 # Build the project
 FROM base AS builder
-ARG PROJECT
-
 WORKDIR /app
 
 # Copy lockfile and package.json's of isolated subworkspace
@@ -35,31 +34,36 @@ RUN pnpm install --frozen-lockfile
 # Copy source code of isolated subworkspace
 COPY --from=pruner /app/out/full/ .
 
-RUN turbo build:envless --filter=${PROJECT}
+RUN turbo build:envless --filter=telli-dialog
 # RUN --mount=type=cache,id=pnpm,target=~/.pnpm-store pnpm prune --prod --no-optional
 RUN pnpm prune --prod --no-optional
 RUN rm -rf ./**/*/src
 
 # Final image
-FROM alpine AS runner
-ARG PROJECT
+FROM base AS runner
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nodejs
 USER nodejs
 
 WORKDIR /app
+# copy nextjs application 
 COPY --from=builder --chown=nodejs:nodejs /app .
-WORKDIR /app/apps/${PROJECT}
+# copy whole db folder in order to run database migrations
+COPY --from=pruner --chown=nodejs:nodejs /app/apps/dialog/src/db /app/apps/dialog/src/db
+# List files of directory here
+RUN ls -al /app/apps/dialog/src/db
+WORKDIR /app/apps/dialog
 
 ARG PORT=3000
 ENV PORT=${PORT}
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
+ENV TURBO_TELEMETRY_DISABLED=1
 EXPOSE ${PORT}
 
-CMD npm run db:migrate && HOSTNAME=0.0.0.0 node dist/main
-
+# https://nextjs.org/docs/pages/api-reference/config/next-config-js/output
+CMD turbo db:migrate && HOSTNAME=0.0.0.0 node server.js
 
 # RUN npm run build:envless --verbose
 # RUN cp -r /app/.next/standalone/* /app/
