--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
+    "build:docker:dialog": "docker build -t telli-dialog -f ./apps/dialog/Dockerfile .",
     "dev": "turbo run dev:local",
     "lint": "turbo run lint"
   },
