--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -136,10 +136,12 @@
     "esbuild": "0.25.5",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
+    "eslint-config-prettier": "10.1.8",
     "express": "4.21.2",
     "jose": "6.0.6",
     "oidc-provider": "8.8.0",
     "prettier": "3.4.2",
+    "prettier-eslint": "16.4.2",
     "typescript": "5.7.2",
     "vitest": "3.0.5"
   }
